fixed alignment of cards

--- a/style.css
+++ b/style.css
@@ -13,9 +13,8 @@ img {
 
 .card {
     max-width: 400px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    /* border: 1px black solid; */
+    margin: 5px auto 5px auto;
+    text-align: left;
 }
 
 footer {
